--- a/.github/workflows/daily-report.yml
+++ b/.github/workflows/daily-report.yml
@@ -14,8 +14,9 @@ jobs:
         uses: actions/checkout@4
       - name: Setup Node.js
         uses: actions/setup-node@v4
-        with: node-version:"20"
-              cache:"npm"
+        with: 
+          node-version:"20"
+          cache:"npm"
       - name: Install dependencies
         run: npm ci
 
