--- a/.github/workflows/daily-report.yml
+++ b/.github/workflows/daily-report.yml
@@ -11,7 +11,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@4
+        uses: actions/checkout@v4
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -26,7 +26,7 @@ jobs:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
       - name: Run daily pipeline
-        run: npx tsx src/main.ts
+        run: npx tsx src/services/runDailyPipeline.ts
         env:
           DATABASE_URL: ${{secrets.DATABASE_URL}}
           GROQ_API_KEY: ${{secrets.GROQ_API_KEY}}
